--- a/src/routes/Home/components/HomeView.scss
+++ b/src/routes/Home/components/HomeView.scss
@@ -1,6 +1,6 @@
 .home {
     .dn {display: none}
-    padding-bottom: 1.866666rem;
+    padding-bottom: 0.533333rem;
     div.banner {
         img {
             height: 4rem;
@@ -178,7 +178,7 @@
         height: 0.8rem;
         line-height: 0.8rem;
         text-align: center;
-        color: rgb(187, 187, 187);
+        color: #ffa507;
     }
     .icon-car {
         z-index: 999;
