--- a/src/routes/Detail/components/detail.scss
+++ b/src/routes/Detail/components/detail.scss
@@ -57,7 +57,9 @@ body {
         }
     }
     .bottom {
-        position: relative;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
         height: 0.96rem;
         background: #fff;
         margin-top: 60px;
